<resources>
    <string name="app_name">New Zealand Schools</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="search">SEARCH</string>
    <string name="favourites">FAVOURITES</string>
    <string name="nearby">NEARBY</string>
    <string name="results">RESULTS</string>
    <string name="map">MAP</string>

    <string name="region">REGION</string>
    <string name="city">CITY</string>
    <string name="suburb">SUBURB</string>
    <string name="gender">GENDER</string>
    <string name="school_type">SCHOOL TYPE</string>
    <string name="decile">DECILE</string>
</resources>
